outputs/main/hsevo-qd_bpp_online_2025-07-25_20-12-23/problem_iter1_response11.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 23
    score_factor = np Fuj Test"]==event
                              ^
SyntaxError: unterminated string literal (detected at line 23)
2
1
